--- a/MobileTag/Properties/AndroidManifest.xml
+++ b/MobileTag/Properties/AndroidManifest.xml
@@ -6,12 +6,15 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/AppTheme">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBvgTfTO62jv-h2qfhnR6X6lvdNKasIcbc" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<uses-permission android:name="android.permission.INTERNET" />
 		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+		<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 		<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 		<uses-feature android:name="android.hardware.location.gps" />
 	</application>
